vendor/blpapi_cpp_3.12.3.1-windows/include/blpapi_sessionoptions.h

inline
blpapi_SessionOptions_t *SessionOptions::handle() const
{
    return d_handle_p;
}