blpapi-sys/src/bindings.rs

extern "C" {
    pub fn blpapi_Session_tryNextEvent(
        session: *mut blpapi_Session_t,
        eventPointer: *mut *mut blpapi_Event_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_subscribe(
        session: *mut blpapi_Session_t,
        subscriptionList: *const blpapi_SubscriptionList_t,
        handle: *const blpapi_Identity_t,
        requestLabel: *const ::std::os::raw::c_char,
        requestLabelLen: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_resubscribe(
        session: *mut blpapi_Session_t,
        resubscriptionList: *const blpapi_SubscriptionList_t,
        requestLabel: *const ::std::os::raw::c_char,
        requestLabelLen: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_resubscribeWithId(
        session: *mut blpapi_Session_t,
        resubscriptionList: *const blpapi_SubscriptionList_t,
        resubscriptionId: ::std::os::raw::c_int,
        requestLabel: *const ::std::os::raw::c_char,
        requestLabelLen: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_unsubscribe(
        session: *mut blpapi_Session_t,
        unsubscriptionList: *const blpapi_SubscriptionList_t,
        requestLabel: *const ::std::os::raw::c_char,
        requestLabelLen: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_cancel(
        session: *mut blpapi_Session_t,
        correlationIds: *const blpapi_CorrelationId_t,
        numCorrelationIds: usize,
        requestLabel: *const ::std::os::raw::c_char,
        requestLabelLen: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_setStatusCorrelationId(
        session: *mut blpapi_Session_t,
        service: *const blpapi_Service_t,
        identity: *const blpapi_Identity_t,
        correlationId: *const blpapi_CorrelationId_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_sendRequest(
        session: *mut blpapi_Session_t,
        request: *const blpapi_Request_t,
        correlationId: *mut blpapi_CorrelationId_t,
        identity: *mut blpapi_Identity_t,
        eventQueue: *mut blpapi_EventQueue_t,
        requestLabel: *const ::std::os::raw::c_char,
        requestLabelLen: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_sendRequestTemplate(
        session: *mut blpapi_Session_t,
        requestTemplate: *const blpapi_RequestTemplate_t,
        correlationId: *mut blpapi_CorrelationId_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_createSnapshotRequestTemplate(
        requestTemplate: *mut *mut blpapi_RequestTemplate_t,
        session: *mut blpapi_Session_t,
        subscriptionString: *const ::std::os::raw::c_char,
        identity: *const blpapi_Identity_t,
        correlationId: *mut blpapi_CorrelationId_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_sendAuthorizationRequest(
        session: *mut blpapi_Session_t,
        request: *const blpapi_Request_t,
        identity: *mut blpapi_Identity_t,
        correlationId: *mut blpapi_CorrelationId_t,
        eventQueue: *mut blpapi_EventQueue_t,
        requestLabel: *const ::std::os::raw::c_char,
        requestLabelLen: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_openService(
        session: *mut blpapi_Session_t,
        serviceName: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_openServiceAsync(
        session: *mut blpapi_Session_t,
        serviceName: *const ::std::os::raw::c_char,
        correlationId: *mut blpapi_CorrelationId_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_generateToken(
        session: *mut blpapi_Session_t,
        correlationId: *mut blpapi_CorrelationId_t,
        eventQueue: *mut blpapi_EventQueue_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_getService(
        session: *mut blpapi_Session_t,
        service: *mut *mut blpapi_Service_t,
        serviceName: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Session_createUserHandle(
        session: *mut blpapi_Session_t,
    ) -> *mut blpapi_UserHandle_t;
}
extern "C" {
    pub fn blpapi_Session_createIdentity(session: *mut blpapi_Session_t) -> *mut blpapi_Identity_t;
}
extern "C" {
    pub fn blpapi_Session_getAbstractSession(
        session: *mut blpapi_Session_t,
    ) -> *mut blpapi_AbstractSession_t;
}
extern "C" {
    pub fn blpapi_SubscriptionItr_create(
        session: *mut blpapi_Session_t,
    ) -> *mut blpapi_SubscriptionIterator_t;
}
extern "C" {
    pub fn blpapi_SubscriptionItr_destroy(iterator: *mut blpapi_SubscriptionIterator_t);
}
extern "C" {
    pub fn blpapi_SubscriptionItr_next(
        iterator: *mut blpapi_SubscriptionIterator_t,
        subscriptionString: *mut *const ::std::os::raw::c_char,
        correlationId: *mut blpapi_CorrelationId_t,
        status: *mut ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_SubscriptionItr_isValid(
        iterator: *const blpapi_SubscriptionIterator_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_getVersionInfo(
        majorVersion: *mut ::std::os::raw::c_int,
        minorVersion: *mut ::std::os::raw::c_int,
        patchVersion: *mut ::std::os::raw::c_int,
        buildVersion: *mut ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn blpapi_getVersionIdentifier() -> *const ::std::os::raw::c_char;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct blpapi_Topic {
    _unused: [u8; 0],
}
pub type blpapi_Topic_t = blpapi_Topic;
extern "C" {
    pub fn blpapi_Topic_create(from: *mut blpapi_Topic_t) -> *mut blpapi_Topic_t;
}
extern "C" {
    pub fn blpapi_Topic_destroy(victim: *mut blpapi_Topic_t);
}
extern "C" {
    pub fn blpapi_Topic_compare(
        lhs: *const blpapi_Topic_t,
        rhs: *const blpapi_Topic_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_Topic_service(topic: *const blpapi_Topic_t) -> *mut blpapi_Service_t;
}
extern "C" {
    pub fn blpapi_Topic_isActive(topic: *const blpapi_Topic_t) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct blpapi_ServiceRegistrationOptions {
    _unused: [u8; 0],
}
pub type blpapi_ServiceRegistrationOptions_t = blpapi_ServiceRegistrationOptions;
pub type blpapi_ProviderEventHandler_t = ::std::option::Option<
    unsafe extern "C" fn(
        event: *mut blpapi_Event_t,
        session: *mut blpapi_ProviderSession_t,
        userData: *mut ::std::os::raw::c_void,
    ),
>;
extern "C" {
    pub fn blpapi_ProviderSession_create(
        parameters: *mut blpapi_SessionOptions_t,
        handler: blpapi_ProviderEventHandler_t,
        dispatcher: *mut blpapi_EventDispatcher_t,
        userData: *mut ::std::os::raw::c_void,
    ) -> *mut blpapi_ProviderSession_t;
}
extern "C" {
    pub fn blpapi_ProviderSession_destroy(session: *mut blpapi_ProviderSession_t);
}
extern "C" {
    pub fn blpapi_ProviderSession_start(
        session: *mut blpapi_ProviderSession_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_startAsync(
        session: *mut blpapi_ProviderSession_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_stop(
        session: *mut blpapi_ProviderSession_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_stopAsync(
        session: *mut blpapi_ProviderSession_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_nextEvent(
        session: *mut blpapi_ProviderSession_t,
        eventPointer: *mut *mut blpapi_Event_t,
        timeoutInMilliseconds: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_tryNextEvent(
        session: *mut blpapi_ProviderSession_t,
        eventPointer: *mut *mut blpapi_Event_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_registerService(
        session: *mut blpapi_ProviderSession_t,
        serviceName: *const ::std::os::raw::c_char,
        identity: *const blpapi_Identity_t,
        registrationOptions: *mut blpapi_ServiceRegistrationOptions_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_activateSubServiceCodeRange(
        session: *mut blpapi_ProviderSession_t,
        serviceName: *const ::std::os::raw::c_char,
        begin: ::std::os::raw::c_int,
        end: ::std::os::raw::c_int,
        priority: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_deactivateSubServiceCodeRange(
        session: *mut blpapi_ProviderSession_t,
        serviceName: *const ::std::os::raw::c_char,
        begin: ::std::os::raw::c_int,
        end: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_registerServiceAsync(
        session: *mut blpapi_ProviderSession_t,
        serviceName: *const ::std::os::raw::c_char,
        identity: *const blpapi_Identity_t,
        correlationId: *mut blpapi_CorrelationId_t,
        registrationOptions: *mut blpapi_ServiceRegistrationOptions_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_deregisterService(
        session: *mut blpapi_ProviderSession_t,
        serviceName: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_resolve(
        session: *mut blpapi_ProviderSession_t,
        resolutionList: *mut blpapi_ResolutionList_t,
        resolveMode: ::std::os::raw::c_int,
        identity: *const blpapi_Identity_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_resolveAsync(
        session: *mut blpapi_ProviderSession_t,
        resolutionList: *const blpapi_ResolutionList_t,
        resolveMode: ::std::os::raw::c_int,
        identity: *const blpapi_Identity_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_createTopics(
        session: *mut blpapi_ProviderSession_t,
        topicList: *mut blpapi_TopicList_t,
        resolveMode: ::std::os::raw::c_int,
        identity: *const blpapi_Identity_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_createTopicsAsync(
        session: *mut blpapi_ProviderSession_t,
        topicList: *const blpapi_TopicList_t,
        resolveMode: ::std::os::raw::c_int,
        identity: *const blpapi_Identity_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_getTopic(
        session: *mut blpapi_ProviderSession_t,
        message: *const blpapi_Message_t,
        topic: *mut *mut blpapi_Topic_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_createTopic(
        session: *mut blpapi_ProviderSession_t,
        message: *const blpapi_Message_t,
        topic: *mut *mut blpapi_Topic_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_createServiceStatusTopic(
        session: *mut blpapi_ProviderSession_t,
        service: *const blpapi_Service_t,
        topic: *mut *mut blpapi_Topic_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_deleteTopics(
        session: *mut blpapi_ProviderSession_t,
        topics: *mut *const blpapi_Topic_t,
        numTopics: usize,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn blpapi_ProviderSession_terminateSubscriptionsOnTopics(
        session: *mut blpapi_ProviderSession_t,
        topics: *mut *const blpapi_Topic_t,
        numTopics: usize,
        message: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
